remove get user by token func
