# src/routes.js
@@ -18,7 +18,6 @@ router.post("/set-2fa", authMiddleware, wrapAsync(userController.setTwoFa));
 router.post("/disable-2fa", authMiddleware, wrapAsync(userController.disableTwoFa));
 router.post("/delete-account", authMiddleware, wrapAsync(userController.deleteAccount));
 
-router.get("/get-user-by-token", wrapAsync(userController.getUserByAccessToken));
 router.get("/get-refreshed-tokens", wrapAsync(userController.refreshToken));
 
 router.get("/get-user-by-personal-id/:personalId", basicAuth, wrapAsync(userController.getUserByPersonalId));
